# aita-bias-analysis

./: .gitignore  FairML.ipynb  LICENSE.md  README.md  pyproject.toml
.github/workflows/: checks.yml
aita_bias_analysis/: data_collector.py  data_loader.py  demographic_inference.py  judgements.py  pushshift.py  reddit.py
notebooks/: FairML.ipynb  GBRT Tuning and SHAP-Analysis.ipynb  Preprocessing_and_GBRT.ipynb
