[tool.poetry]
name = "aita-bias-analysis"
version = "0.1.0"
description = "School project focused on detecting and eliminating bias in AITA thread outcomes"
authors = ["Sarah Akbar <sakbar@umass.edu>", "Simon Andrews <sbandrews@umass.edu>", "Prakamya Mishra <prakamyamish@umass.edu>", "Rohan Mittal <rohanmittal@umass.edu>"]
readme = "README.md"
packages = [{include = "aita_bias_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
types-requests = "^2.28.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
