[tool.poetry]
name = "aita-bias-analysis"
version = "0.1.0"
description = "School project focused on detecting and eliminating bias in AITA thread outcomes"
authors = ["Sarah Akbar <sakbar@umass.edu>", "Simon Andrews <sbandrews@umass.edu>", "Prakamya Mishra <prakamyamish@umass.edu>", "Rohan Mittal <rohanmittal@umass.edu>"]
readme = "README.md"
packages = [{include = "aita_bias_analysis"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "^1.23.5"
requests = "^2.28.1"
pandas = "^1.5.2"
praw = "^7.6.1"
scikit-learn = "^1.1.3"
tqdm = "^4.64.1"
textstat = "^0.7.3"
vadersentiment = "^3.3.2"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
aif360 = "^0.5.0"
fairlearn = "^0.8.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
pandas-stubs = "^1.5.2.221124"
types-requests = "^2.28.11.5"
types-tqdm = "^4.64.7.9"
jupyterlab = "^3.5.0"
ipywidgets = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "praw.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "textstat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vaderSentiment.*"
ignore_missing_imports = true

# TODO: we should have typing for these
[[tool.mypy.overrides]]
module = "demographic_inference.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "judgements.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pushshift.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "reddit.*"
ignore_missing_imports = true
